# cloudbrain

./: .env.example  .gitignore  AI_AUTONOMOUS_COLLABORATION.md  AI_Brain_Eternal_Intelligence.md  AI_COLLABORATION_BEST_PRACTICES.md  AI_CONVERSATION_SYSTEM.md  AI_CONVERSATION_SYSTEM_eo.md  AI_INSTALLATION_BEST_PRACTICES.md  AI_INSTALLATION_PROMPT.md  AI_NOTIFICATION_SYSTEM.md  AI_NOTIFICATION_SYSTEM_eo.md  AI_ONBOARDING.md  AI_README.md  AI_REPUTATION_SYSTEM.md  AI_RULE_SYSTEM.md  AI_RULE_SYSTEM_eo.md  ALL_FIXES_APPLIED.md  ANALYSIS_SUMMARY.md  ANALYSIS_SUMMARY_eo.md  API_DEVELOPMENT_PROGRESS.md  API_SPECIFICATION.md  API_SPECIFICATION_V1.md  AUTONOMOUS_AGENT_DOCUMENTATION.md  AUTONOMOUS_AI_AGENT_README.md  AUTONOMOUS_AI_QUICKSTART.md  BLOG_MIGRATION_COMPLETE.md  BUG_REPORT.md  BUG_TRACKING_SUMMARY.md  CHANGELOG.md  CLIENT_ENHANCEMENTS.md  CLOUD_BRAIN_DB.md  CLOUD_BRAIN_DB_eo.md  CLOUD_BRAIN_ENHANCED.md  COLLABORATION_PATTERN_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COORDINATE_WORK.py  CURRENT_STATE.md  CURRENT_STATE_eo.md  DEEPSEEK_AI_GUIDE.md  DEMOCRATIC_AUTHORIZATION.md  (+174 more)
client/: README.md  README_REST_CLIENT.md  advanced_monitor.py  ai_brain_state.py  ai_conversation_helper.py  ai_websocket_client.py  auto_monitor_messages.py  check_message_55.py  check_online.py  cloudbrain_client.py  cloudbrain_collaboration_helper.py  cloudbrain_quick.py  cloudbrain_rest_client.py  confirm_receipt.py  db_config.py  enhanced_brain_state.py  enhanced_pair_programming.py  li_entry_point.py  logging_config.py  pyproject.toml  realtime_chat.py  send_message.py  send_project_proposal.py  send_reply_to_li.py  send_response.py  simple_chat.py  simple_chat_traeai.py  test_cloudbrain_rest_client.py  test_nickname.py
client/cloudbrain_client/: __init__.py  ai_brain_state.py  ai_brain_state_orm.py  ai_websocket_api_client.py  ai_websocket_client.py  cloudbrain_collaboration_helper.py  db_config.py  enhanced_brain_state.py  (+3 more)
client/cloudbrain_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+299 files in other folders)
