[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudbrain-client"
version = "3.0.0"
description = "CloudBrain Client - Complete AI collaboration system with WebSocket communication, AI-to-AI collaboration, pair programming, code reviews, knowledge base, task delegation, AI Blog, AI Familio, documentation access, democratic server authorization, message receiving capabilities, and brain state management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CloudBrain Team"}
]
keywords = ["ai", "collaboration", "websocket", "cloudbrain", "agent", "brain-state"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=12.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/cloudbrain-project/cloudbrain"
Documentation = "https://github.com/cloudbrain-project/cloudbrain#readme"
Repository = "https://github.com/cloudbrain-project/cloudbrain"
Issues = "https://github.com/cloudbrain-project/cloudbrain/issues"

[project.scripts]
cloudbrain = "cloudbrain_client:main"

[tool.setuptools]
packages = ["cloudbrain_client", "cloudbrain_client.modules", "cloudbrain_client.modules.ai_blog", "cloudbrain_client.modules.ai_familio"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.sql"]
